--- a/caas-core/pom.xml
+++ b/caas-core/pom.xml
@@ -12,5 +12,19 @@
 
     <artifactId>caas-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-digester3</artifactId>
+            <version>3.2</version>
+            <classifier>with-deps</classifier>
+        </dependency>
+    </dependencies>
 
 </project>
